--- a/HTML/Link/pages/about.html
+++ b/HTML/Link/pages/about.html
@@ -7,22 +7,23 @@
 </head>
 <body>
 
-    <header>This is About page.</header>
-    <img src="images/about.jpg" alt="">
     <nav>
         <a href="../index.html">HOME</a> |
         <a href="services.html">SERVICE</a> |
         <a href="about.html">ABOUT</a> |
         <a href="contact.html">CONTACT</a>
-    </nav>
+        </nav>
+
+    <header>
+        <h1>This is About page.</h1>
+    <img src="../images/about.jpg" alt="About image" width="1325" height="250">
+    </header>
     
     <div>
-        <h3>Service title one</h3>
+        <h3>About title one</h3>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium facere veniam dicta laboriosam sint accusamus quod esse, placeat tempore ad, voluptates facilis consequuntur molestiae aperiam dolore repudiandae error dolor vel voluptate quidem sed rerum autem laudantium! Asperiores quod nulla reprehenderit esse consequuntur quibusdam nam tempora possimus voluptates voluptatum, commodi quidem optio sed odio totam deleniti natus! Velit molestiae mollitia a, quidem quos id corrupti voluptatum, similique modi quas quae dolor ipsa totam commodi et harum, porro tenetur nihil voluptas laborum! Nam libero dolores quo? Voluptatum, obcaecati unde expedita dolores aperiam ipsum vitae eum quos. Cupiditate nobis sint doloremque tempore excepturi.</p>
-        <h3>Service title two</h3>
+        <h3>About title two</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur eveniet molestiae repellendus dicta fugiat distinctio voluptates ipsam sed, repudiandae dolores provident deleniti consequuntur magni enim atque fugit! Sed, laudantium similique consequatur rem praesentium, labore voluptates repudiandae deleniti rerum dignissimos impedit eveniet distinctio tenetur. Cupiditate iste odit ratione natus expedita repudiandae exercitationem temporibus! Pariatur animi doloribus nobis deserunt tempore veritatis? Ab, eius sed? Blanditiis unde totam enim. Quos quidem porro ipsum veniam fugiat officiis inventore quisquam blanditiis pariatur, accusamus enim quia nemo reiciendis doloremque? Vitae doloribus, quam quae voluptatem eos illo ipsum, eligendi id reiciendis exercitationem quos obcaecati corrupti. Ea, fugiat?</p>
-        <h3>Service title three</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat iusto cum quo amet, voluptate expedita excepturi officia similique mollitia sapiente quam unde provident placeat in, vero nobis nihil et impedit rem odit reiciendis molestias. Voluptatem nisi cumque unde, voluptate quidem quae iusto numquam vero enim soluta ipsam. Ut, vitae labore.</p>
     </div>
 
     <hr>
