--- a/HTML/Link/pages/services.html
+++ b/HTML/Link/pages/services.html
@@ -15,7 +15,7 @@
 
     <header>
         <h1>This is HOME Page.</h1>
-        <img src="../images/services.jpg" alt="SERVICE image" width="500" >
+        <img src="../images/services.jpg" alt="SERVICE image" width="1325" height="250" >
     </header>
 
     <div>
