--- a/HTML/Link/index.html
+++ b/HTML/Link/index.html
@@ -15,7 +15,7 @@
 
     <header>
         <h1>This is HOME Page.</h1>
-        <img src="images/home.webp" alt="HOME image">
+        <img src="images/home.webp" alt="HOME image" width="1325">
     </header>
 
     <div>
