--- a/HTML/Link/pages/services.html
+++ b/HTML/Link/pages/services.html
@@ -14,7 +14,7 @@
     </nav>
 
     <header>
-        <h1>This is HOME Page.</h1>
+        <h1>This is SERVICES Page.</h1>
         <img src="../images/services.jpg" alt="SERVICE image" width="1325" height="250" >
     </header>
 
