--- a/Table_Assigment.html
+++ b/Table_Assigment.html
@@ -7,25 +7,24 @@
 </head>
 <body>
     <table border="1" cellspacing="0" cellpadding="15">
-        <thead>
+        <tbody>
             <tr>
                 <td rowspan="2">No</td>
                 <td>Problem</td>
                 <td>for</td>
                 <td>a web</td>
             </tr>
-        </thead>
             <tr>
-                <td></td>
+                
                 <td>professional</td>
-                <td colspan="2" rowspan="3">as</td>
+                <td colspan="2" rowspan="3" align="center">as</td>
             </tr>
             <tr>
-                <td colspan="2">you</td>
+                <td colspan="2" align="center">you</td>
             </tr>
             <tr>
                 <td>will</td>
-                <td rowspan="2">see</td>
+                <td rowspan="2" align="center">see</td>
             </tr>
             <tr>
                 <td>in</td>
