--- a/table.html
+++ b/table.html
@@ -25,7 +25,7 @@
                 <td>Yangon</td>
                 <td>24</td>
                 <td>2020/05/02</td>
-                <td>700000</td>
+                <td><img src="HTML/Link/images/about.jpg" alt=""></td>
             </tr>
             <tr>
                 <td>Ko Ko</td>
