--- a/HTML/form.html
+++ b/HTML/form.html
@@ -28,8 +28,8 @@
         <br><br>
         <label for="">Gender</label>
         <br><br>
-        <input type="radio" name="gender" id="male"><label for="male">Male</label>
-        <input type="radio" name="gender" id="female"><label for="female">Female</label>
+        <input type="radio" name="gender" id="male" value="Male"><label for="male">Male</label>
+        <input type="radio" name="gender" id="female" value="Female"><label for="female">Female</label>
         <br><br>
         <label for="year">Year</label>
         <select name="year" id="year">
@@ -38,6 +38,30 @@
             <option value="2">Second year</option>
             <option value="3">Third year</option>
         </select>
+        <br><br>
+        <input type="checkbox" name="movies" id="movies" value="Movies"><label for="movies">Movies</label>
+        <input type="checkbox" name="gamming" id="gamming" value="Gamming"><label for="gamming">Gamming</label>
+        <input type="checkbox" name="travelling" id="travelling" value="Travellling"><label for="travelling">Travelling</label>
+        <br><br>
+        <label for="adress">Adress</label>
+        <textarea name="Stu_adress" id="adress" cols="30" rows="10"></textarea>
+        <br><br>
+        <input type="time" name="" id="">
+        <br><br>
+        <input type="week" name="" id="">
+        <br><br>
+        <input type="color" name="" id="">
+        <br><br>
+        <input type="range" min="0" max="100" name="" id="">
+        <br><br>
+        <input type="text" name="" id="" required>
+        <br><br>
+        <input type="number" name="placeholder" id="" placeholder="09-*********">
+        <br><br>
+        <input type="text" name="" id="" readonly>
+        <input type="text" name="" id="" disabled>
+        <br><br>
+        <input type="text" name="def_value" id="" value="35">
         <br><br>
         <button type="submit">Save</button>
     </form>
