--- a/HTML/Idol_Project/idol_project.html
+++ b/HTML/Idol_Project/idol_project.html
@@ -10,6 +10,7 @@
     <a href="#about">About</a>
     <a href="#bounties">Bounties</a>
     <a href="#ships">Ships</a>
+    <a href="#members_dreams">Dreams</a>
     <a href="#moment">Moments</a>
 
     <img src="images/Untitled-1.jpg" alt="Straw Hat Crew" width="1325" height="250">
@@ -208,6 +209,96 @@
         <p>* The Thousand Sunny was first conceived by Franky when he was young. Inspired by his mentor Tom's creation, the Oro Jackson, Franky dreamed of making a ship that would sail around the world. <br>* This dream, however, was shattered when Tom was taken away, as Franky blamed himself for Tom's arrest and vowed to never build another ship ever again</p>
     </dd>
 </dt>
+
+<hr>
+<h2 id="members_dreams" align="center">Members's Dreams</h2>
+<dt>
+    <dt>
+        <h3>Dreams</h3>
+    </dt>
+    <dd>
+        <p>* Each member of the Straw Hats has a dream they want to achieve. <br>* These dreams are their reasons for joining Luffy's crew, and essentially the driving force behind their lives. <br>* Most crew member's dream was inspired by tragedies (often deaths) in their childhoods that involved at least one person they idolized and cared for deeply.</p>
+    </dd>
+</dt>
+
+<table border="1" cellpadding="15" cellspacing="0">
+    <tbody>
+        <tr>
+            <td>
+                <img src="images/zoro,solo.png" alt="" width="200" height="200">
+            </td>
+            <td>
+                <p>* <b>Zoro's dream</b>, shared with Kuina, is to become the world's greatest swordsman.<br>* To fulfill this dream, he must surpass every swordsman in the world, including the world's current greatest swordsman, Dracule Mihawk.<br>* Zoro nearly gave up his dream in an attempt to convince the Warlord of the Sea, Bartholomew Kuma to refrain from killing Luffy despite that the first time they met Zoro threatened to kill Luffy if he got in the way of his dream, proving his loyalty towards his captain as well as the rest of the crew, as he believes that he cannot be the world's strongest swordsman if he cannot protect his captain's dream (Luffy, likewise, believes that the Pirate King should have the best swordsman on his side).</p>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <img src="images/nimi,solo.png" alt="" width="200" height="200">
+            </td>
+            <td>
+                <p>* <b>Nami's dream</b> is to draw a map of the entire world.<br>* She has already mapped all the areas that she has traveled, and it can be assumed that she will create a world map once the story is over.<br>* Also, at the beginning of the story, she was also trying to get Beli 100,000,000 in order to buy and save her hometown, Cocoyasi Village, from the clutches of the Fish-Man pirate Arlong; while her savings were confiscated after stealing Beli 93,000,000, in the process of stealing from pirates, she met Luffy, who defeated Arlong and freed the village.</p>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <img src="images/usoop,solo.png" alt="" width="200" height="200">
+            </td>
+            <td>
+                <p>* <b>Usopp's dream</b> is to become a brave warrior of the sea like his father, Yasopp.<br>* Although he implies that he has accomplished this dream (before he leaves the crew), but eventually realizes on his confrontation with Luffy that he has yet to achieve it, Usopp has a second dream.<br>* After the Little Garden Arc he hopes to visit Elbaf and see the warrior giants he idolizes, and during the Post-War Arc Usopp develops yet another dream, to be the true Sniper King, after he got Luffy's message to get stronger in two years.</p>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <img src="images/sanji,solo.png" alt="" width="200" height="200">
+            </td>
+            <td>
+                <p>* <b>Sanji's dream</b>, shared with Zeff, is to find the All Blue, a legendary ocean.<br>* It is assumed to be in the Grand Line, a place where all waters from all over the four seas gather, bringing fish from all over the globe.<br>* During the early-Arlong Arc, Sanji had stated that he wanted to visit Fish-Man Island someday to see a Mermaid, which has been fulfilled; sure enough, the chef broke down crying upon seeing all the mermaids and implied that meeting the mermaids was on an equivalent level to finding the All-Blue.<br>* He also wished to consume the Suke Suke no Mi but unfortunately for him, Absalom destroyed that dream as he had already eaten it.<br>* However, upon seeing Absalom's detestable actions, Sanji changed his mind about his desire to consume it.<br>* Ironically, because of his recently acquired Raid Suit and its power of invisibility, Sanji's childhood dream of turning invisible has been restored and fulfilled through the Germa technology he hated.<br>* Sanji nearly gave up on his dream of locating All Blue when he prioritized protecting Zeff from the death threats of his father and the Big Mom Pirates.</p>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <img src="images/chopper,solo.png" alt="" width="200" height="200">
+            </td>
+            <td>
+                <p>* <b>Chopper's dream</b> is to become a great doctor that can cure any disease, much like his father figure Dr. Hiriluk's ambition, as well as to travel across the world, exploring with his friends, and expanding his horizons.</p>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <img src="images/robin,solo.png" alt="" width="200" height="200">
+            </td>
+            <td>
+                <p>* <b>Robin's dream</b> is to find the Rio Poneglyph which tells the True History of the One Piece world including the Void Century, continuing the research of her mother Nico Olvia and her old mentor Clover.<br>* Robin had an opportunity to learn about the Void Century after talking to Silvers Rayleigh but decided to continue her journey.<br>* Recently, she learned about the Road Poneglyphs, which point to Laugh Tale and the Rio Poneglyph.</p>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <img src="images/franky,solo.png" alt="" width="200" height="200">
+            </td>
+            <td>
+                <p>* <b>Franky's dream</b> is to build and travel on a ship which would experience countless battles, can overcome extreme hardships and can reach the end of the Grand Line just like the Oro Jackson, the ship built by Franky's mentor Tom for Gol D. Roger, did.<br>* He has designed and built the ship which the Straw Hats are riding and it's his task to keep it in good condition.<br>* Previously, one of his dreams was to beat Spandam to pieces. Fortunately, this was fulfilled toward the end of the Enies Lobby Arc.</p>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <img src="images/brook,solo.png" alt="" width="200" height="200">
+            </td>
+            <td>
+                <p>* <b>Brook's dream</b> is to return to Laboon, whom his former crew, the Rumbar Pirates, had left behind at Reverse Mountain for his safety, with the promise to return after crossing the Grand Line.<br>* He wishes to fulfill that promise to Laboon, as well as that of his former crewmates, who died at their journey, to deliver their final song recorded in a tone dial before their death.</p>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <img src="images/jinbe,solo.png" alt="" width="200" height="200">
+            </td>
+            <td>
+                <p>* <b>Jinbe's dream</b>, which he inherited from his former captain, Fisher Tiger, is the coexistence of humans and the undersea dwellers. He initially resigned from Neptune's Royal Guards to join Tiger in his quest for equality, and then allied himself with the World Government by becoming a Warlord of the Sea, and with two Emperors (Edward Newgate and Charlotte Linlin) in order to protect the citizens of Fish-Man Island from being attacked.<br>* However, as stated by the Sun Pirates, those actions were mostly for the benefit of others, as they encouraged him to follow his new desire to help Luffy become the next Pirate King.</p>
+            </td>
+        </tr>
+    </tbody>
+</table>
+
+
             
 <hr>
 <h2 align="center" id="moment">The Best Moment</h2>
