Idol Project Manage

--- a/HTML/Idol_Project/idol_project.html
+++ b/HTML/Idol_Project/idol_project.html
@@ -100,38 +100,38 @@
     <tbody>
         <tr align="center">
             <td colspan="2">
-                <img src="images/luffy boundry.jpg" alt="" width="200" height="300"> <h3>Monkey D. Luffy <br>"Straw Hat"<br>(Captain)</h3>
+                <img src="images/luffy boundry.jpg" alt="Luffy Boundry" width="200" height="300"> <h3>Monkey D. Luffy <br>"Straw Hat"<br>(Captain)</h3>
             </td>
             <td colspan="2">
-                <img src="images/Jinbe.jpg" alt="" width="200" height="300" ><h3>Jinbe <br>"King of the Sea"<br>(Helmsman)</h3>
+                <img src="images/Jinbe.jpg" alt="Jinbe Boundry" width="200" height="300" ><h3>Jinbe <br>"King of the Sea"<br>(Helmsman)</h3>
             </td>
         </tr>
         <tr>
             <td>
-                <img src="images/zoro.jpg" alt="" width="200" height="300"><h3 align="center">Roronoa Zoro <br>"Pirate Hunter"<br>(Swordsman)</h3>
+                <img src="images/zoro.jpg" alt="Zoro Boundry" width="200" height="300"><h3 align="center">Roronoa Zoro <br>"Pirate Hunter"<br>(Swordsman)</h3>
             </td>
             <td>
-                <img src="images/nami_up.jpg" alt="" width="200" height="300"><h3 align="center">Nami <br>"Cat Burglar"<br>(Navigator)</h3>
+                <img src="images/nami_up.jpg" alt="Nami Boundry" width="200" height="300"><h3 align="center">Nami <br>"Cat Burglar"<br>(Navigator)</h3>
             </td>
             <td>
-                <img src="images/usoop.jpg" alt="" width="200" height="300"><h3 align="center">Usopp <br>"God Usopp"<br>(Sniper)</h3>
+                <img src="images/usoop.jpg" alt="Usopp Boundry" width="200" height="300"><h3 align="center">Usopp <br>"God Usopp"<br>(Sniper)</h3>
             </td>
             <td>
-                <img src="images/sanji.jpg" alt="" width="200" height="300"><h3 align="center">Sanji <br>"Black Leg"</b><br>(Cook)</h3>
+                <img src="images/sanji.jpg" alt="Sanji Boundry" width="200" height="300"><h3 align="center">Sanji <br>"Black Leg"</b><br>(Cook)</h3>
             </td>
         </tr>
         <tr>
             <td>
-                <img src="images/chopper.png" alt="" width="200" height="300"><h3 align="center">Tony Tony Chopper <br>"Cotton Candy Lover"<br>(Doctor)</h3>
+                <img src="images/chopper.png" alt="Chopper Boundry" width="200" height="300"><h3 align="center">Tony Tony Chopper <br>"Cotton Candy Lover"<br>(Doctor)</h3>
             </td>
             <td>
-                <img src="images/robin.jpg" alt="" width="200" height="300"><h3 align="center">Nico Robin <br>"Devil Child"<br>(Archaeologist)</h3>
+                <img src="images/robin.jpg" alt="Robin Boundry" width="200" height="300"><h3 align="center">Nico Robin <br>"Devil Child"<br>(Archaeologist)</h3>
             </td>
             <td>
-                <img src="images/franky.jpg" alt="" width="200" height="300"><h3 align="center">Franky <br>"Cyborg"<br>(Shipwright)</h3>
+                <img src="images/franky.jpg" alt="Franky Boundry" width="200" height="300"><h3 align="center">Franky <br>"Cyborg"<br>(Shipwright)</h3>
             </td>
             <td>
-                <img src="images/brook.jpg" alt="" width="200" height="300"><h3 align="center">Brook <br>"Soul King"<br>(Musician, Swordsman)</h3>
+                <img src="images/brook.jpg" alt="Brook Boundry" width="200" height="300"><h3 align="center">Brook <br>"Soul King"<br>(Musician, Swordsman)</h3>
             </td>
         </tr>
     </tbody>
@@ -139,7 +139,7 @@
 
 <hr>
 <h2 align="center" id="ships">Ships</h2>
-<p align="center"><img src="images/Going Merry.jpg" alt="" width="430" height="280"></p>
+<p align="center"><img src="images/Going Merry.jpg" alt="Going Merry" width="430" height="280"></p>
 <h3 align="center">Going Merry</h3>
 <dt>
     <dt>
@@ -160,36 +160,36 @@
 <table align="center" cellpadding="15">
     <tbody>
         <tr align="center">
-            <td colspan="4"><img src="images/Thousand_Sunny_Digitally_Colored_Manga.webp" alt="" width="220" height="300">
+            <td colspan="4"><img src="images/Thousand_Sunny_Digitally_Colored_Manga.webp" alt="Thousand Sunny" width="220" height="300">
                 <h3 align="center">Thousand Sunny</h3>
             </td>
         </tr>
         <tr>
             <td>
-                <img src="images/Paddle Wheels.png" alt="" width="240" height="240"><h3 align="center"><h3>Channal - 0 (x2) <br> Paddle Wheels</h3>
+                <img src="images/Paddle Wheels.png" alt="Channal 0" width="240" height="240"><h3 align="center"><h3>Channal - 0 (x2) <br> Paddle Wheels</h3>
             </td>
             <td>
-                <img src="images/Shiro Mokuba.png" alt="" width="240" height="240"><h3 align="center">Channal - 1 <br>Shiro Mokuba I</h3>
+                <img src="images/Shiro Mokuba.png" alt="Channal 1" width="240" height="240"><h3 align="center">Channal - 1 <br>Shiro Mokuba I</h3>
             </td>
             <td>
-                <img src="images/Mini Mrry II.png" alt="" width="240" height="240"><h3 align="center">Channal - 2 <br>Mini Mrry II</h3>
+                <img src="images/Mini Mrry II.png" alt="Channal 2" width="240" height="240"><h3 align="center">Channal - 2 <br>Mini Mrry II</h3>
             </td>
             <td>
-                <img src="images/Shark Submerge III.png" alt="" width="240" height="240"><h3 align="center">Channal - 3 <br>Shark Submerge III</h3>
+                <img src="images/Shark Submerge III.png" alt="Channal 3" width="240" height="240"><h3 align="center">Channal - 3 <br>Shark Submerge III</h3>
             </td>
         </tr>
         <tr>
             <td>
-                <img src="images/Kurosai FR-U IV.png" alt="" width="240" height="240"><h3 align="center">Channal - 4 <br>Kurosai FR-U IV</h3>
+                <img src="images/Kurosai FR-U IV.png" alt="Channal 4" width="240" height="240"><h3 align="center">Channal - 4 <br>Kurosai FR-U IV</h3>
             </td>
             <td>
-                <img src="images/Brachio Tank V.png" alt="" width="240" height="240"><h3 align="center">Channal - 5 <br>Brachio Tank V</h3>
+                <img src="images/Brachio Tank V.png" alt="Channal 5" width="240" height="240"><h3 align="center">Channal - 5 <br>Brachio Tank V</h3>
             </td>
             <td>
-                <img src="images/Inflatable Pool.png" alt="" width="240" height="240"><h3 align="center">Channal - 6 <br>Inflatable Pool</h3>
+                <img src="images/Inflatable Pool.png" alt="Channal 6" width="240" height="240"><h3 align="center">Channal - 6 <br>Inflatable Pool</h3>
             </td>
             <td>
-                <img src="images/General Franky.jpg" alt="" width="240" height="240"><h3 align="center">General Franky</h3>
+                <img src="images/General Franky.jpg" alt="General Franky" width="240" height="240"><h3 align="center">General Franky</h3>
             </td>
         </tr>
     </tbody>
@@ -225,7 +225,7 @@
     <tbody>
         <tr>
             <td>
-                <img src="images/zoro,solo.png" alt="" width="200" height="200">
+                <img src="images/zoro,solo.png" alt="Zoro" width="200" height="200">
             </td>
             <td>
                 <h3>Roronoa Zoro</h3>
@@ -234,7 +234,7 @@
         </tr>
         <tr>
             <td>
-                <img src="images/nimi,solo.png" alt="" width="200" height="200">
+                <img src="images/nimi,solo.png" alt="Nami" width="200" height="200">
             </td>
             <td>
                 <h3>Nami</h3>
@@ -243,7 +243,7 @@
         </tr>
         <tr>
             <td>
-                <img src="images/usoop,solo.png" alt="" width="200" height="200">
+                <img src="images/usoop,solo.png" alt="Usoop" width="200" height="200">
             </td>
             <td>
                 <h3>Usopp</h3>
@@ -252,7 +252,7 @@
         </tr>
         <tr>
             <td>
-                <img src="images/sanji,solo.png" alt="" width="200" height="200">
+                <img src="images/sanji,solo.png" alt="Sanji" width="200" height="200">
             </td>
             <td>
                 <h3>Sanji</h3>
@@ -261,7 +261,7 @@
         </tr>
         <tr>
             <td>
-                <img src="images/chopper,solo.png" alt="" width="200" height="200">
+                <img src="images/chopper,solo.png" alt="Chopper" width="200" height="200">
             </td>
             <td>
                 <h3>Tony Tony Chopper</h3>
@@ -270,7 +270,7 @@
         </tr>
         <tr>
             <td>
-                <img src="images/robin,solo.png" alt="" width="200" height="200">
+                <img src="images/robin,solo.png" alt="Robin" width="200" height="200">
             </td>
             <td>
                 <h3>Nico Robin</h3>
@@ -279,7 +279,7 @@
         </tr>
         <tr>
             <td>
-                <img src="images/franky,solo.png" alt="" width="200" height="200">
+                <img src="images/franky,solo.png" alt="Franky" width="200" height="200">
             </td>
             <td>
                 <h3>Franky</h3>
@@ -288,7 +288,7 @@
         </tr>
         <tr>
             <td>
-                <img src="images/brook,solo.png" alt="" width="200" height="200">
+                <img src="images/brook,solo.png" alt="Brook" width="200" height="200">
             </td>
             <td>
                 <h3>Brook</h3>
@@ -297,7 +297,7 @@
         </tr>
         <tr>
             <td>
-                <img src="images/jinbe,solo.png" alt="" width="200" height="200">
+                <img src="images/jinbe,solo.png" alt="Jinbe" width="200" height="200">
             </td>
             <td>
                 <h3>Jinbe</h3>
