idol project repair 2

--- a/HTML/Idol_Project/idol_project.html
+++ b/HTML/Idol_Project/idol_project.html
@@ -15,9 +15,10 @@
         <a href="#moment">Moments</a>
     </div>
     <br>
-
-    <img src="images/group.png" alt="Straw Hat Crew" width="1325" height="250">
-                
+    <div align="center">
+        <img src="images/group.png" alt="Straw Hat Crew" width="1325" height="250">
+    </div>
+    
         <table align="center" cellpadding="15">
             <tbody>
                 <tr>
