--- a/CSS/selector.html
+++ b/CSS/selector.html
@@ -25,5 +25,14 @@
     </span>
 
     <a href="#" title="google">Google</a>
+
+    <div>
+        <p>This is p tag 1.</p>
+        <p>This is p tag 2.</p>
+        <p>This is p tag 3.</p>
+        <span>
+            <p>This is p tag 4.</p>
+        </span>
+    </div>
 </body>
 </html>
