--- a/HTML/form.html
+++ b/HTML/form.html
@@ -28,8 +28,10 @@
         <br><br>
         <label for="">Gender</label>
         <br><br>
-        <input type="radio" name="gender" id="male" value="Male"><label for="male">Male</label>
-        <input type="radio" name="gender" id="female" value="Female"><label for="female">Female</label>
+        <input type="radio" name="gender" id="male" value="Male">
+        <label for="male">Male</label>
+        <input type="radio" name="gender" id="female" value="Female">
+        <label for="female">Female</label>
         <br><br>
         <label for="year">Year</label>
         <select name="year" id="year">
