border, margin, register

--- a/CSS/register.html
+++ b/CSS/register.html
@@ -53,7 +53,7 @@
             <label for="reading">Reading</label>
         </div>
         <div>
-            <input type="checkbox" name="dancing" id="dancing" disabled>
+            <input type="checkbox" name="dancing" id="dancing" disabledt>
             <label for="dancing">Dancing</label>
         </div>
         <div>
@@ -80,7 +80,9 @@
         </fieldset>
 
         <p></p>
+        <button id="register_btn"></button>
         <button>Register</button>
+        <br><br><br>
         <div></div>
 
     </form>
