float, grid, layout

--- a/CSS/register.html
+++ b/CSS/register.html
@@ -53,7 +53,7 @@
             <label for="reading">Reading</label>
         </div>
         <div>
-            <input type="checkbox" name="dancing" id="dancing" disabledt>
+            <input type="checkbox" name="dancing" id="dancing" disabled>
             <label for="dancing">Dancing</label>
         </div>
         <div>
@@ -80,8 +80,7 @@
         </fieldset>
 
         <p></p>
-        <button id="register_btn"></button>
-        <button>Register</button>
+        <button id="register_btn">Register</button>
         <br><br><br>
         <div></div>
 
