font, position, project

--- a/CSS/grid.html
+++ b/CSS/grid.html
@@ -48,5 +48,33 @@
         <div style="background-color: orange;">9</div>
         <div style="background-color: red;">9</div>
     </div>
+
+    <h1>Grid Colunm</h1>
+    <div class="gridfour">
+        <div style="background-color: antiquewhite;" class="columnadd">1</div>
+        <div style="background-color: aqua;">2</div>
+        <div style="background-color: skyblue;">3</div>
+        <div style="background-color: blue;" >4</div>
+        <div style="background-color: grey;">5</div>
+        <div style="background-color: green;">6</div>
+        <div style="background-color: palegreen;">7</div>
+        <div style="background-color: yellow;">8</div>
+        <div style="background-color: orange;">9</div>
+        <div style="background-color: red;">9</div>
+    </div>
+
+    <h1>Grid Row</h1>
+    <div class="gridfive">
+        <div style="background-color: antiquewhite;" class="rowadd">1</div>
+        <div style="background-color: aqua;">2</div>
+        <div style="background-color: skyblue;">3</div>
+        <div style="background-color: blue;">4</div>
+        <div style="background-color: grey;">5</div>
+        <div style="background-color: green;">6</div>
+        <div style="background-color: palegreen;">7</div>
+        <div style="background-color: yellow;">8</div>
+        <div style="background-color: orange;">9</div>
+        <div style="background-color: red;">9</div>
+    </div>
 </body>
 </html>
