--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,43 +1,13 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>HTML Intro</title>
-
-        <link rel="stylesheet" href="styles.css">
-    </head>
-    <body>
-        <!-- This is h1 element -->
-        <h1>Hello World</h1>
-        <!-- This is h1 tag -->
-        <h1></h1>
-        <!-- This is P element -->
-        <p>I start learning Web Development.</p>
-        <!-- This is p tag -->
-        <p></p>
-        <div>
-            <p>
-                <span>Hello</span>
-            </p>
-        </div>
-        <!-- Attribute -->
-        <p align="right" id="p-tag text-right">This is element 1.</p>
-        <p align=""center" id="p2" class="p-tag">This is p element 2.</p>
-        <p id="p3" class="p-tag">This is p element 3.</p>
-
-        <h1>Case sensitive.</h1>
-        <p>Hello        my         student welcome to my class.</p>
-
-        <!-- Ugly code -->
-         <div><div><p><span>Hello HTML.</span></p></div></div>
-        
-         <!-- Pretty code -->
-          <div>
-            <div>
-                <p>
-                    <span>Hello HTML.</span>
-                </p>
-            </div>
-          </div>
-
-        </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=
+    , initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>My name is Aung Htike Lynn.</h1>
+    <h1>I live in Pathein</h1>
+</body>
 </html>
