css project promotion, new arrival

--- a/CSS/CSS_Project/index.html
+++ b/CSS/CSS_Project/index.html
@@ -26,7 +26,9 @@
             </li>
         </ul>
     </nav>
+    <!-- end nav -->
 
+    <!-- start bunner -->
     <div>
         <img src="Images/carousal.jpg" alt="" class="carousel_img">
         <div class="carousel_text">
@@ -35,7 +37,9 @@
             <button class="shop_now">Shop Now</button>
         </div>
     </div>
+    <!-- end bunner -->
 
+    <!-- start icon line -->
     <div id="icon_line">
         <div class="order_icon">
             <span><i class=" icon fa-solid fa-truck fa-2x" ></i></span>
@@ -61,6 +65,156 @@
             <p class="icon_text">Discounts up to 90%</p>
         </div>
     </div>
+    <div class="icon_line_clear"></div>
+    <!-- end icon line -->
+    
+    <!-- start promotion list -->
+    <div class="promotion_title">
+        <h2>Promotion Items</h2>
+        <hr class="divided">
+    </div>
+
+    <div class="promotion">
+        <div class="promotion_item">
+            <a href="product_detail.html"><img src="Images/shirt_1.jpg" alt="" class="promotion_image"></a>
+            <div class="promotion_price">
+                <span class="dis_price">50,000MMK</span>
+                <span class="normal_price">60,000MMK</span>
+            </div>       
+            <p>GUCCI T-Shirt</p>
+        </div>
+        <div class="promotion_item">
+            <a href="product_detail.html"><img src="Images/shirt_2.jpg" alt="" class="promotion_image"></a>
+            <div class="promotion_price">
+                <span class="dis_price">50,000MMK</span>
+                <span class="normal_price">60,000MMK</span>
+            </div>    
+            <p>GUCCI T-Shirt</p>
+        </div>
+        <div class="promotion_item">
+            <a href="product_detail.html"><img src="Images/shirt_3.jpg" alt="" class="promotion_image"></a>
+            <div class="promotion_price">
+                <span class="dis_price">50,000MMK</span>
+                <span class="normal_price">60,000MMK</span>
+            </div>    
+            <p>GUCCI T-Shirt</p>
+        </div>
+        <div class="promotion_item">
+            <a href="product_detail.html"><img src="Images/shirt_4.jpg" alt="" class="promotion_image"></a>
+            <div class="promotion_price">
+                <span class="dis_price">50,000MMK</span>
+                <span class="normal_price">60,000MMK</span>
+            </div>    
+            <p>GUCCI T-Shirt</p>
+        </div>
+    </div>
+    <!-- end promotion -->
+
+    <!-- start new arrival -->
+    <div class="promotion_title">
+        <h2>New Arrival</h2>
+        <hr class="divided">
+    </div>
+    <div class="new_arrival">
+        <div class="new_arrival_item">
+            <a href="product_detail.html"><img src="Images/shirt_5.jpg" alt="" class="new_arrival_image"></a>
+            <div class="new_arrival_icon">
+                <a href=""><i class="fa-solid fa-eye"></i></a>
+                <a href=""><i class="fa-solid fa-cart-plus"></i></a>
+            </div>
+            <div class="new_arrival_text">
+                <p>GUCCI T-Shirt</p>
+                <p>50,000MMK</p>
+            </div>
+            <a href=""><i class="fa-regular fa-heart fa-xl heart_list"></i></a>
+        </div>
+        <div class="new_arrival_item">
+            <a href="product_detail.html"><img src="Images/shirt_6.jpg" alt="" class="new_arrival_image"></a>
+            <div class="new_arrival_icon">
+                <a href=""><i class="fa-solid fa-eye"></i></a>
+                <a href=""><i class="fa-solid fa-cart-plus"></i></a>
+            </div>
+            <div class="new_arrival_text">
+                <p>GUCCI T-Shirt</p>
+                <p>50,000MMK</p>
+            </div>
+            <a href=""><i class="fa-regular fa-heart fa-xl heart_list"></i></a>
+        </div>
+        <div class="new_arrival_item">
+            <a href="product_detail.html"><img src="Images/shirt_7.jpg" alt="" class="new_arrival_image"></a>
+            <div class="new_arrival_icon">
+                <a href=""><i class="fa-solid fa-eye"></i></a>
+                <a href=""><i class="fa-solid fa-cart-plus"></i></a>
+            </div>
+            <div class="new_arrival_text">
+                <p>GUCCI T-Shirt</p>
+                <p>50,000MMK</p>
+            </div>
+            <a href=""><i class="fa-regular fa-heart fa-xl heart_list"></i></a>
+        </div>
+        <div class="new_arrival_item">
+            <a href="product_detail.html"><img src="Images/shirt_8.jpg" alt="" class="new_arrival_image"></a>
+            <div class="new_arrival_icon">
+                <a href=""><i class="fa-solid fa-eye"></i></a>
+                <a href=""><i class="fa-solid fa-cart-plus"></i></a>
+            </div>
+            <div class="new_arrival_text">
+                <p>GUCCI T-Shirt</p>
+                <p>50,000MMK</p>
+            </div>
+            <a href=""><i class="fa-regular fa-heart fa-xl heart_list"></i></a>
+        </div>
+        <div class="new_arrival_item">
+            <a href="product_detail.html"><img src="Images/shirt_9.jpg" alt="" class="new_arrival_image"></a>
+            <div class="new_arrival_icon">
+                <a href=""><i class="fa-solid fa-eye"></i></a>
+                <a href=""><i class="fa-solid fa-cart-plus"></i></a>
+            </div>
+            <div class="new_arrival_text">
+                <p>GUCCI T-Shirt</p>
+                <p>50,000MMK</p>
+            </div>
+            <a href=""><i class="fa-regular fa-heart fa-xl heart_list"></i></a>
+        </div>
+        <div class="new_arrival_item">
+            <a href="product_detail.html"><img src="Images/shirt_1.jpg" alt="" class="new_arrival_image"></a>
+            <div class="new_arrival_icon">
+                <a href=""><i class="fa-solid fa-eye"></i></a>
+                <a href=""><i class="fa-solid fa-cart-plus"></i></a>
+            </div>
+            <div class="new_arrival_text">
+                <p>GUCCI T-Shirt</p>
+                <p>50,000MMK</p>
+            </div>
+            <a href=""><i class="fa-regular fa-heart fa-xl heart_list"></i></a>
+        </div>
+        <div class="new_arrival_item">
+            <a href="product_detail.html"><img src="Images/shirt_2.jpg" alt="" class="new_arrival_image"></a>
+            <div class="new_arrival_icon">
+                <a href=""><i class="fa-solid fa-eye"></i></a>
+                <a href=""><i class="fa-solid fa-cart-plus"></i></a>
+            </div>
+            <div class="new_arrival_text">
+                <p>GUCCI T-Shirt</p>
+                <p>50,000MMK</p>
+            </div>
+            <a href=""><i class="fa-regular fa-heart fa-xl heart_list"></i></a>
+        </div>
+        <div class="new_arrival_item">
+            <a href="product_detail.html"><img src="Images/shirt_3.jpg" alt="" class="new_arrival_image"></a>
+            <div class="new_arrival_icon">
+                <a href=""><i class="fa-solid fa-eye"></i></a>
+                <a href=""><i class="fa-solid fa-cart-plus"></i></a>
+            </div>
+            <div class="new_arrival_text">
+                <p>GUCCI T-Shirt</p>
+                <p>50,000MMK</p>
+            </div>
+            <a href=""><i class="fa-regular fa-heart fa-xl heart_list"></i></a>
+        </div>
+    </div>
+    <!-- end new arrival -->
+
 
     <script src="fontawesome/js/all.min.js"></script>
 </body>
