css project homework

--- a/CSS/CSS_Project/index.html
+++ b/CSS/CSS_Project/index.html
@@ -4,24 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lynn Fashion</title>
-    <link rel="icon" href="Images/Logo_1.PNG">
+    <link rel="icon" href="Images/logo_2.PNG">
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="fontawesome/css/all.min.css">
 </head>
 <body>
     <!-- start nav -->
     <nav class="nav">
-        <a href=""><img src="Images/Main_Logo.png" alt="" class="nav_logo"></a>
+        <a href=""><img src="Images/logo_3.PNG" alt="" class="nav_logo"></a>
         <ul class="nav_item">
             <li><a href="index.html">Home</a></li>
-            <li><a href="index.html">Product</a></li>
-            <li><a href="index.html">About</a></li>
-            <li><a href="index.html">Contact</a></li>
-            <li><a href="index.html">Login</a></li>
-            <li><a href="index.html">Register</a></li>
-            <li><a href="index.html"><i class="fa-regular fa-heart fa-xl"></i></a></li>
+            <li><a href="product.html">Product</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="news.html">News</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="register.html">Register</a></li>
+            <li><a href="heart.html"><i class="fa-regular fa-heart fa-xl"></i></a></li>
             <li>
-            <a href="index.html" class="cart_nav_item"><i class="fa-solid fa-cart-shopping fa-lg"></i></a>
+            <a href="cart.html" class="cart_nav_item"><i class="fa-solid fa-cart-shopping fa-lg"></i></a>
             <span class="cart_noti">10</span>
             </li>
         </ul>
@@ -215,6 +215,84 @@
     </div>
     <!-- end new arrival -->
 
+    <!-- start subscribe -->
+    <div class="subscribe">  
+        <div class="subscribe_about">
+            <h2>Subcribe Our Channal</h2>
+            <p class="subscribe_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia id laborum error sequi recusandae dicta quis at aut, aliquam, voluptate vel cupiditate beatae porro, iusto ipsam omnis quibusdam nobis ad!</p>
+            <input type="text" id="" name="" placeholder="example.gmail.com" class="subscribe_input"><button class="subscribe_btn">Subcribe</button>
+        </div> 
+        <img src="Images/logo_2.PNG" alt="" class="subscribe_image">
+    </div>
+    <!-- end subscribe -->
+
+    <!-- start news -->
+    <div class="news"> 
+        <h2>Our News</h2>
+        <hr class="divided">
+    </div>
+    <div class="new_paragraph">
+        <div>
+            <a href="" class="image_hover"><img src="Images/new_1.jpg" alt="" class="new_image"></a>
+            <div  class="new_text">
+                <h3>Discuss with Our Partner</h3>
+                <span class="new_date">By Admin, on 17 July 2024</span>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae laboriosam temporibus nulla sit distinctio neque necessitatibus dolor, cumque porro. Distinctio itaque minima ratione excepturi eligendi ducimus quam aliquid maxime illum?</p>
+                <a href="" class="read_more">Read More</a>
+            </div>
+        </div>
+        <div>
+            <a href="" class="image_hover"><img src="Images/new_1.jpg" alt="" class="new_image"></a>
+            <div  class="new_text">
+                <h3>Discuss with Our Partner</h3>
+                <span class="new_date">By Admin, on 17 July 2024</span>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae laboriosam temporibus nulla sit distinctio neque necessitatibus dolor, cumque porro. Distinctio itaque minima ratione excepturi eligendi ducimus quam aliquid maxime illum?</p>
+                <a href="" class="read_more">Read More</a>
+            </div>
+        </div>
+        <div>
+            <a href="" class="image_hover"><img src="Images/new_1.jpg" alt="" class="new_image"></a>
+            <div  class="new_text">
+                <h3>Discuss with Our Partner</h3>
+                <span class="new_date">By Admin, on 17 July 2024</span>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae laboriosam temporibus nulla sit distinctio neque necessitatibus dolor, cumque porro. Distinctio itaque minima ratione excepturi eligendi ducimus quam aliquid maxime illum?</p>
+                <a href="" class="read_more">Read More</a>
+            </div>
+        </div>
+    </div>
+    <!-- end news -->
+
+    <!-- start footer -->
+    <div class="footer">
+        <div class="footer_about">
+            <h2>Lynn Fashion</h2>
+            <hr class="footer_divided">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores odio saepe est quasi sunt pariatur laborum nemo facere quibusdam consequuntur. Amet maiores eum, dolore ipsam necessitatibus et voluptas error distinctio. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates in numquam dolor itaque.</p>
+        </div>
+        <div>
+            <a href="index.html" class="footer_nav">Home</a>
+            <a href="about.html" class="footer_nav">About</a>
+            <a href="contact.html" class="footer_nav">Contact</a>
+        </div>
+        <div>
+            <a href="product.html" class="footer_nav">Product</a>
+            <a href="news.html" class="footer_nav">News</a>
+            <a href="register.html" class="footer_nav">Register</a>
+        </div>
+        <div class="footer_adress">
+            <p><i class="fa-solid fa-house"></i> Pathein Township</p>
+            <p><i class="fa-solid fa-phone"></i> 09-957068157</p>
+            <p><i class="fa-solid fa-envelope"></i>  aunghtikelynn23599@gmail.com</p>
+            <p>
+                <a href=""><i class="fa-brands fa-facebook fa-2x footer_icon"></i></a>
+                <a href=""><i class="fa-brands fa-square-instagram fa-2x footer_icon"></i></a>
+                <a href=""><i class="fa-brands fa-twitter fa-2x footer_icon"></i></a>
+                <a href=""><i class="fa-brands fa-youtube fa-2x footer_icon"></i></a>
+                <a href=""><i class="fa-brands fa-tiktok fa-2x footer_icon"></i></a>
+            </p>
+        </div>
+    </div>
+    <!-- end footer -->
 
     <script src="fontawesome/js/all.min.js"></script>
 </body>
