--- a/JS_LECTURE/operator.html
+++ b/JS_LECTURE/operator.html
@@ -30,6 +30,48 @@
         // number = number + 383
         document.write(number);
         document.write("<br>");
-    </script>
+
+        // substration operator
+        let two = 3 - 1;
+        document.write(two);
+        document.write("<br>");
+        let sub = 30;
+        document.write(sub);
+        document.write("<br>");
+        sub -=20;
+        document.write(sub);
+        document.write("<br>");
+
+        // division
+        let div1 =20 / 4;
+        document.write(div1);
+        document.write("<br>");
+
+        let div2 = 50;
+        div2 /= 2;
+        document.write(div2);
+        document.write("<br>");    
+        
+        // remainder operator
+        let reml = 20 % 4;
+        document.write(reml);
+        document.write("<br>");
+
+        // multiplication
+        let multi = 2000 * 123;
+        document.write(multi);
+        document.write("<br>");
+
+        // exponentation
+        let expl = 2 ** 3;
+        document.write(expl);
+        document.write("<br>");
+
+        // precendence
+        let total = 2 * ( 2 + 5 ) / 2 % 2 - 5;
+        document.write(total);
+        document.write("<br>");
+
+        </script>
 </body>
 </html>
