--- a/JS_LECTURE/operator.html
+++ b/JS_LECTURE/operator.html
@@ -44,7 +44,7 @@
 
         // division
         let div1 =20 / 4;
-        document.write(div1);
+        console.log(div1);(div1);
         document.write("<br>");
 
         let div2 = 50;
@@ -54,7 +54,7 @@
         
         // remainder operator
         let reml = 20 % 4;
-        document.write(reml);
+        console.log(reml);
         document.write("<br>");
 
         // multiplication
